; ModuleID = '/home/carl/AnghaBench/TDengine/src/util/src/extr_tlosertree.c_tLoserTreeCreate.c'
source_filename = "/home/carl/AnghaBench/TDengine/src/util/src/extr_tlosertree.c_tLoserTreeCreate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32, i32, i32, i8*, i32* }

@.str = private unnamed_addr constant [52 x i8] c"allocate memory for losertree failed. out of memory\00", align 1
@TSDB_CODE_CLI_OUT_OF_MEMORY = common dso_local global i32 0, align 4
@TSDB_CODE_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @tLoserTreeCreate(%struct.TYPE_6__** %0, i32 %1, i8* %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.TYPE_6__**, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store %struct.TYPE_6__** %0, %struct.TYPE_6__*** %6, align 8
  store i32 %1, i32* %7, align 4
  store i8* %2, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  %12 = load i32, i32* %7, align 4
  %13 = shl i32 %12, 1
  store i32 %13, i32* %10, align 4
  %14 = load i32, i32* %10, align 4
  %15 = sext i32 %14 to i64
  %16 = mul i64 4, %15
  %17 = add i64 32, %16
  %18 = trunc i64 %17 to i32
  %19 = call i64 @calloc(i32 1, i32 %18)
  %20 = inttoptr i64 %19 to %struct.TYPE_6__*
  %21 = load %struct.TYPE_6__**, %struct.TYPE_6__*** %6, align 8
  store %struct.TYPE_6__* %20, %struct.TYPE_6__** %21, align 8
  %22 = load %struct.TYPE_6__**, %struct.TYPE_6__*** %6, align 8
  %23 = load %struct.TYPE_6__*, %struct.TYPE_6__** %22, align 8
  %24 = icmp eq %struct.TYPE_6__* %23, null
  br i1 %24, label %25, label %28

25:                                               ; preds = %4
  %26 = call i32 @pError(i8* getelementptr inbounds ([52 x i8], [52 x i8]* @.str, i64 0, i64 0))
  %27 = load i32, i32* @TSDB_CODE_CLI_OUT_OF_MEMORY, align 4
  store i32 %27, i32* %5, align 4
  br label %72

28:                                               ; preds = %4
  %29 = load %struct.TYPE_6__**, %struct.TYPE_6__*** %6, align 8
  %30 = load %struct.TYPE_6__*, %struct.TYPE_6__** %29, align 8
  %31 = bitcast %struct.TYPE_6__* %30 to i8*
  %32 = getelementptr inbounds i8, i8* %31, i64 32
  %33 = bitcast i8* %32 to i32*
  %34 = load %struct.TYPE_6__**, %struct.TYPE_6__*** %6, align 8
  %35 = load %struct.TYPE_6__*, %struct.TYPE_6__** %34, align 8
  %36 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %35, i32 0, i32 4
  store i32* %33, i32** %36, align 8
  %37 = load i32, i32* %7, align 4
  %38 = load %struct.TYPE_6__**, %struct.TYPE_6__*** %6, align 8
  %39 = load %struct.TYPE_6__*, %struct.TYPE_6__** %38, align 8
  %40 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %39, i32 0, i32 0
  store i32 %37, i32* %40, align 8
  %41 = load i32, i32* %10, align 4
  %42 = load %struct.TYPE_6__**, %struct.TYPE_6__*** %6, align 8
  %43 = load %struct.TYPE_6__*, %struct.TYPE_6__** %42, align 8
  %44 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %43, i32 0, i32 1
  store i32 %41, i32* %44, align 4
  %45 = load i8*, i8** %8, align 8
  %46 = load %struct.TYPE_6__**, %struct.TYPE_6__*** %6, align 8
  %47 = load %struct.TYPE_6__*, %struct.TYPE_6__** %46, align 8
  %48 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %47, i32 0, i32 3
  store i8* %45, i8** %48, align 8
  %49 = load i32, i32* %9, align 4
  %50 = load %struct.TYPE_6__**, %struct.TYPE_6__*** %6, align 8
  %51 = load %struct.TYPE_6__*, %struct.TYPE_6__** %50, align 8
  %52 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %51, i32 0, i32 2
  store i32 %49, i32* %52, align 8
  %53 = load %struct.TYPE_6__**, %struct.TYPE_6__*** %6, align 8
  %54 = load %struct.TYPE_6__*, %struct.TYPE_6__** %53, align 8
  %55 = call i32 @tLoserTreeInit(%struct.TYPE_6__* %54)
  %56 = load i32, i32* %10, align 4
  %57 = sub nsw i32 %56, 1
  store i32 %57, i32* %11, align 4
  br label %58

58:                                               ; preds = %67, %28
  %59 = load i32, i32* %11, align 4
  %60 = load i32, i32* %7, align 4
  %61 = icmp sge i32 %59, %60
  br i1 %61, label %62, label %70

62:                                               ; preds = %58
  %63 = load %struct.TYPE_6__**, %struct.TYPE_6__*** %6, align 8
  %64 = load %struct.TYPE_6__*, %struct.TYPE_6__** %63, align 8
  %65 = load i32, i32* %11, align 4
  %66 = call i32 @tLoserTreeAdjust(%struct.TYPE_6__* %64, i32 %65)
  br label %67

67:                                               ; preds = %62
  %68 = load i32, i32* %11, align 4
  %69 = add nsw i32 %68, -1
  store i32 %69, i32* %11, align 4
  br label %58

70:                                               ; preds = %58
  %71 = load i32, i32* @TSDB_CODE_SUCCESS, align 4
  store i32 %71, i32* %5, align 4
  br label %72

72:                                               ; preds = %70, %25
  %73 = load i32, i32* %5, align 4
  ret i32 %73
}

declare dso_local i64 @calloc(i32, i32) #1

declare dso_local i32 @pError(i8*) #1

declare dso_local i32 @tLoserTreeInit(%struct.TYPE_6__*) #1

declare dso_local i32 @tLoserTreeAdjust(%struct.TYPE_6__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
